Updated and added new files

--- a/Numpy/Numpy_matrix.ipynb
+++ b/Numpy/Numpy_matrix.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "0ba77283-0aae-4c49-9cbd-4a432cdc6889",
    "metadata": {},
    "outputs": [
@@ -31,7 +31,7 @@
        "        [5, 6, 7, 8]])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "0dbfe02b-c8de-40d7-85cb-f38500b234d2",
    "metadata": {},
    "outputs": [
@@ -56,7 +56,7 @@
        "        [4, 8]])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "6969f057-8670-466d-bfe0-b6ca55074e97",
    "metadata": {},
    "outputs": [
@@ -81,7 +81,7 @@
        "       [0., 0., 1.]])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "bd00da8c-386a-4a4f-aec6-3197ab5c425b",
    "metadata": {},
    "outputs": [
@@ -106,7 +106,7 @@
        "       [0., 0., 1., 0.]])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "b6df7424-a176-45dc-804b-56556a205f20",
    "metadata": {},
    "outputs": [
@@ -131,7 +131,7 @@
        "       [ 0,  0, 30]])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,8 +144,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "f31ab3e4-86a4-4b78-a300-ac5fed0368dc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[10.,  0.,  0.],\n",
+       "       [ 0., 20.,  0.],\n",
+       "       [ 0.,  0., 30.]])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# for matrix multiplications\n",
+    "id @ dgm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b4657698-7b42-4665-bc9f-c9e180127ad9",
    "metadata": {},
    "outputs": [],
    "source": []
