Modified with cleaner comments

--- a/Numpy/Intro_numpy.ipynb
+++ b/Numpy/Intro_numpy.ipynb
@@ -15,7 +15,7 @@
    "id": "90c2a214-f6a7-4423-949c-036332b6fd49",
    "metadata": {},
    "source": [
-    "We can create a numpy array by passing a sequence data type inside np.array() function adn we can create any diemnsional array we want"
+    "We can create a numpy array by passing a sequence data type inside np.array() function and we can create any dimensional array we want"
    ]
   },
   {
