--- a/Numpy/Numpy_properties.ipynb
+++ b/Numpy/Numpy_properties.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "19299bd7-19fd-454d-8bc5-1a821da73f23",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "790068ff-3c30-4de5-9bc3-5396cd5c049c",
    "metadata": {},
    "outputs": [
@@ -22,7 +22,7 @@
        "array([1, 2, 3, 4])"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "1c288961-1462-4e00-84b1-c067939ac6b2",
    "metadata": {},
    "outputs": [
@@ -44,7 +44,7 @@
        "1"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "30a4e432-2164-46e1-8f66-a14936a23732",
    "metadata": {},
    "outputs": [
@@ -65,7 +65,7 @@
        "4"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "be5e3fc5-40f6-424d-b28e-c287756b431f",
    "metadata": {},
    "outputs": [
@@ -87,7 +87,7 @@
        "(4,)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -98,38 +98,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "7274418b-f56a-4d89-a674-568f07f9525f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4"
+       "8"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# gives us the individual element size in no.of bytes\n",
     "arr.itemsize"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "b1d07c51-d546-40aa-82a7-71c16ee79b75",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "dtype('int32')"
+       "dtype('int64')"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -140,17 +141,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "26b3b4be-0bed-4a62-a41d-8089cf56c78d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "16"
+       "32"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,17 +162,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "6e90ff2e-34fe-4491-8b8b-bb34dfd114c5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4"
+       "np.int64(4)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,17 +183,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "29766436-792f-4504-9bc4-495264a28e3b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1"
+       "np.int64(1)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,17 +204,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "f25ac578-39f5-4bdc-8f67-faf40591ec2b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "10"
+       "np.int64(10)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,17 +225,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "bbaf34eb-4518-4450-8b1a-faaa8b4d98f3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2.5"
+       "np.float64(2.5)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "3d0c3193-b2b6-4873-8451-cbdc3ee86d79",
    "metadata": {},
    "outputs": [
@@ -255,7 +256,7 @@
        "array([1, 2, 3, 4])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "66b1354d-224e-4912-be3b-90806e9678c8",
    "metadata": {},
    "outputs": [
@@ -278,7 +279,7 @@
        "array([1, 5])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 41,
    "id": "d0e0c472-62d5-4646-a71c-3b6cdcd5bd72",
    "metadata": {},
    "outputs": [
@@ -305,7 +306,7 @@
        "        [21, 22, 23, 24]]])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -317,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "7380ba4c-b522-49d7-839a-c482f5031f5f",
    "metadata": {},
    "outputs": [
@@ -327,7 +328,7 @@
        "(2, 3, 4)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,8 +338,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "12c0419e",
+   "metadata": {},
+   "source": [
+    "Here shape reperesnets 2 blocks in which each block has 3 rows and each row has 4 columns\n",
+    "so axis= 0 means highest axis means it will take only box's as consideration,so when we select only axis = 0, it performs opeartion on remaining shape such as (3,4), so min(arr, axis = 0) results in an (3, 4) shaped array"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "918b4215-7db1-4b46-b7ab-598584475853",
    "metadata": {},
    "outputs": [
@@ -350,18 +360,19 @@
        "       [ 9, 10, 11, 12]])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# this calculates by keeping remaining 2 axis as fixed and caluclate based on this one, like calcualtes min(arr3[][0][0], =)\n",
     "arr3.min(axis = 0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "eb22e3da-bddf-499a-9943-47c9707e512a",
    "metadata": {},
    "outputs": [
@@ -372,18 +383,19 @@
        "       [13, 14, 15, 16]])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# This calculates by keeping the axis 0 as fixed and axis 2 as fixed and calcualtes based only on axis 1 like min(arr3[0][][0])\n",
     "arr3.min(axis = 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "1c778d35-d401-4950-916f-835585f336a1",
    "metadata": {},
    "outputs": [
@@ -394,7 +406,7 @@
        "       [13, 17, 21]])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -405,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "dba7a434-d845-41d4-95ed-3b969f2f8461",
    "metadata": {},
    "outputs": [
@@ -415,7 +427,7 @@
        "array([1, 2, 3, 4])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -426,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "645fb9f7-0908-4a6a-be8a-1e348628393a",
    "metadata": {},
    "outputs": [
@@ -436,7 +448,7 @@
        "array([1, 1, 2, 3])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -448,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "b34259ec-fc7a-4218-8310-ab72df953774",
    "metadata": {},
    "outputs": [
@@ -458,20 +470,20 @@
        "array([0, 1, 3, 4])"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# we can even assing multiple values at a time\n",
+    "# we can even assign multiple values at a time\n",
     "arr[[0, 1]] = [0, 1]\n",
     "arr"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "5af5dea4-8c71-421f-9045-0a03f6c94217",
    "metadata": {},
    "outputs": [
@@ -481,7 +493,7 @@
        "array([0, 0, 0, 0])"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -494,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "id": "1dcd2594-6b42-4a12-850e-4f46e5c8ed4a",
    "metadata": {},
    "outputs": [
@@ -505,7 +517,7 @@
        "       [5, 6, 7, 8]])"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -516,17 +528,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "id": "8f9e4c68-ba77-4359-922a-655b65b134cc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2"
+       "np.int64(2)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -538,17 +550,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "id": "152f63c5-4e75-4e92-8e89-6d487127e4ce",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2"
+       "np.int64(2)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -560,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "id": "e1b07b93-9948-4b69-adbf-5a70227d9171",
    "metadata": {},
    "outputs": [
@@ -570,7 +582,7 @@
        "array([2, 6])"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -581,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "id": "a1608d4b-31ae-46b9-978d-23f3309065a3",
    "metadata": {},
    "outputs": [
@@ -591,7 +603,7 @@
        "array([2, 7])"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -602,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 30,
    "id": "8e97a626-d523-4912-bfee-65092d666cc2",
    "metadata": {},
    "outputs": [
@@ -613,7 +625,7 @@
        "       [5, 6, 7, 8]])"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -624,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 31,
    "id": "0ce22a43-388b-46bf-a179-b83ecaf54657",
    "metadata": {},
    "outputs": [
@@ -637,7 +649,7 @@
        "       [7, 8]])"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -649,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 32,
    "id": "e660ebc3-841f-463d-a6f9-483ceecea9d5",
    "metadata": {},
    "outputs": [
@@ -662,7 +674,7 @@
        "       [7, 8]])"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -674,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 33,
    "id": "163e4445-96ec-49ac-82f1-337c79a02e7f",
    "metadata": {},
    "outputs": [
@@ -687,7 +699,7 @@
        "       [6, 8]])"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -699,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 34,
    "id": "bfc7089d-5e39-40f4-b81a-7a82831f9cad",
    "metadata": {},
    "outputs": [
@@ -710,7 +722,7 @@
        "       [5, 6, 7, 8]])"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -721,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 35,
    "id": "80c7c0ab-e269-4538-9a94-de2496069c7d",
    "metadata": {},
    "outputs": [
@@ -732,7 +744,7 @@
        "       [False,  True,  True,  True]])"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -744,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 36,
    "id": "4f78d2b1-2b00-4f5e-9f17-ecfb72831318",
    "metadata": {},
    "outputs": [],
@@ -754,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 37,
    "id": "b34a9622-64d6-44e1-a2e3-d6423b8e0496",
    "metadata": {},
    "outputs": [
@@ -764,7 +776,7 @@
        "array([6, 7, 8])"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -775,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 38,
    "id": "ae998d8f-9a29-46ed-b80d-c22bc81976ce",
    "metadata": {},
    "outputs": [],
@@ -785,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 39,
    "id": "b16d8946-78e9-4cca-9dc5-eba9459a7bad",
    "metadata": {},
    "outputs": [
@@ -796,7 +808,7 @@
        "       [5, 1, 1, 1]])"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -807,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 40,
    "id": "1a342006-7fcc-4945-8253-1e3612729303",
    "metadata": {},
    "outputs": [
@@ -818,7 +830,7 @@
        "       [5, 0, 1, 2]])"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -839,7 +851,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -853,7 +865,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
