--- a/Numpy/Numpyvslists.ipynb
+++ b/Numpy/Numpyvslists.ipynb
@@ -5,12 +5,12 @@
    "id": "66c00b67-58f8-4b91-b9ef-fe128ce9e4ed",
    "metadata": {},
    "source": [
-    "Just testing which is faster numpy arrays or lists by generating some 10million random numbers and finding average"
+    "Testing which is faster numpy arrays or lists by generating some 10million random numbers and finding average"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "id": "ee5dcfbf-1107-458f-9471-5a5ef4ed3d88",
    "metadata": {},
    "outputs": [
@@ -18,8 +18,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "149.991531\n",
-      "3.9368178844451904\n"
+      "150.0026768\n",
+      "2.2434844970703125\n"
      ]
     }
    ],
@@ -35,6 +35,7 @@
     "    num = rd.randint(100, 200)\n",
     "    nums.append(num)\n",
     "\n",
+    "# this time.time(), just gives how many seconds  have passed after jan 1, 1970\n",
     "start_time = time.time()\n",
     "print(st.mean(nums))\n",
     "end_time = time.time()\n",
@@ -44,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "id": "932c0886-ce46-4ede-b961-e4c09cd8c7b9",
    "metadata": {},
    "outputs": [
@@ -52,8 +53,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "149.5081214\n",
-      "0.006208896636962891\n"
+      "149.5136372\n",
+      "0.006485462188720703\n"
      ]
     }
    ],
@@ -62,6 +63,7 @@
     "import numpy as np\n",
     "\n",
     "n = 10000000\n",
+    "# this generates a random array of size n with integers between 100, 200.\n",
     "arr = np.random.randint(100, 200, n)\n",
     "\n",
     "start_time = time.time()\n",
@@ -69,6 +71,14 @@
     "end_time = time.time()  # fixed spelling here\n",
     "\n",
     "print(end_time - start_time)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1c2ebdd3",
+   "metadata": {},
+   "source": [
+    "The most important reason for arrays being faster than lists is because arrays store elements in a continuous memory location and also arrays store only same data type, whereas lists store data not as continuous locations(they store metadata like where is the element present, type of element and size of element also)."
    ]
   },
   {
@@ -81,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "id": "6b9adcf0-2634-489a-8003-aed8b008c547",
    "metadata": {},
    "outputs": [
@@ -91,7 +101,7 @@
        "array(['1', 'hello', '2.5'], dtype='<U32')"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -102,8 +112,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8282aec8",
+   "metadata": {},
+   "source": [
+    "If we observe above even though we took different elements, it converted all into same datatype as string with 32 max character length"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c85e1dda",
+   "metadata": {},
+   "source": [
+    "Now we will try to take a string larger than 32 bits"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
    "id": "21ea738c-a2f7-4d11-8068-ce24497d796d",
    "metadata": {},
    "outputs": [
@@ -113,14 +139,12 @@
        "array(['1', 'a really long long long long lon', '2.5'], dtype='<U32')"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# If we observe above even though we took different elements, it converted all into same datatype as string with 32 max character length\n",
-    "# Now we will try to take a string larger than 32 bits\n",
     "arr[1] = 'a really long long long long long long long long long long long string'\n",
     "arr"
    ]
@@ -147,27 +171,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 33,
-   "id": "78855d31-981a-4111-91c6-0845dbb601f2",
+   "cell_type": "markdown",
+   "id": "b2fd712b",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# If we observe above it only took first 32 characters and truncated the remaining ones"
+    "If we observe above it only took first 32 characters and truncated the remaining ones"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d3c81035-71f6-451f-83f1-cefeb7836acf",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -181,7 +195,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
